<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/MIC"
        android:title="Claro"
        android:icon="@drawable/tmc"
        app:showAsAction="always"
        android:tooltipText="Tema Claro"
        />
    <item
        android:id="@+id/MIO"
        android:title="Oscuro"
        android:icon="@drawable/tmo"
        app:showAsAction="always"
        android:tooltipText="Tema Oscuro"
        />
    <item
        android:id="@+id/MIP1"
        android:title="Tricolor 1"
        android:icon="@drawable/tm1"
        app:showAsAction="always"
        android:tooltipText="Tema Tricolor 1"
        />
    <item
        android:id="@+id/MIP2"
        android:title="Tricolor 2"
        android:icon="@drawable/tm2"
        app:showAsAction="always"
        android:tooltipText="Tema Tricolor 2"
        />
    <item
        android:id="@+id/MIP3"
        android:title="Tricolor 3"
        android:icon="@drawable/tm3"
        app:showAsAction="always"
        android:tooltipText="Tema Tricolor 3"
        />
    <item
        android:id="@+id/MIP4"
        android:title="Tricolor 4"
        android:icon="@drawable/tm4"
        app:showAsAction="always"
        android:tooltipText="Tema Tricolor 4"
        />

    <item
        android:id="@+id/MOC"
        android:title="@string/IrMenuC"
        android:tooltipText="Menu de Opciones"
        />
    <item
        android:id="@+id/MOP"
        android:title="@string/IrMenuP"
        android:tooltipText="Menu PopUp"
        />
    <item
        android:id="@+id/MOVP"
        android:title="@string/VoMenuPr"
        android:tooltipText="Menu Principal"
        />
    <item
        android:id="@+id/MOS"
        android:title="@string/Salir"
        android:tooltipText="Salir"
        />

</menu>